Action Required, Notification, Priority Alert section on Dashboard UI Issue Fixed Dashboard UI Responsive issue fixed on tablet screen both portrait and landscape..

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -131,7 +131,7 @@ body {
     padding-top: 20px;
     color: #98a5ae;
     float: left;
-    width: 199px;
+    width: 150px;
 
     .date {
       float: left;
@@ -145,6 +145,7 @@ body {
     div {
       margin-bottom: 4px;
       font-weight: bold;
+      text-align:right;
     }
   }
 
@@ -691,16 +692,15 @@ body .login{
     background-color: rgba(19,38,56,.5);
 
     .check-list{
-      float:left;
-      padding: 10px;
-      padding-left: 30px;
-
+     
       .check-box{
         display: inline-block;
+        line-height: 40px;
       }
       .check-label{
         display: inline-block;
-        padding-left: 8%;
+        line-height: 40px;
+       
       }
     }
   }
@@ -3883,6 +3883,11 @@ two-block, one-block {
   }
 }
 
+textarea.instruction {
+  background: transparent;
+  width: 100%;
+}
+
 .ccir-button{
   background-color: #ed7d31 !important;
   margin-right: 0px !important;
@@ -4013,6 +4018,17 @@ two-block, one-block {
       }
     }
   }
+}
+
+.navbar-default .date-info {
+  position: absolute;
+  right: 15px;
+  font-size: 18px;
+  padding-top: 20px;
+  color: #98a5ae;
+  float: left;
+  width: 199px;
+  text-align:left;
 }
 .rowdata-modal{
   padding: 10% 35% !important;
@@ -4410,7 +4426,7 @@ ul.pull-right.setting-user {
   padding-right: 5px;
 }
 button.btn.btn-secondary.dropdown-toggle {
-  margin-right: 10px;
+  margin-left: 12px;
 }
 
 /**
@@ -4441,7 +4457,27 @@ select.form-control {
 {
   position: relative;
 }
+@media(max-width:1024px)
+{
 
+label {
+
+  margin-bottom: 0px;
+  
+}
+.num-block {
+  width: 100% !important;
+}
+
+}
+@media(max-width:1280px)
+{
+    num-block .block-header {
+      padding: 24px 1px 0px;
+      font-size: 12px!important;
+   
+  }
+}
 @media(max-width:768px)
 {
   .navbar-default .header-title {
@@ -4452,6 +4488,12 @@ select.form-control {
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
    width: 100%; 
+}
+
+label {
+
+  margin-bottom: 0px;
+  
 }
 .status .status-content .status-block .each-status {
   padding: 1%;
@@ -4469,35 +4511,30 @@ ul.pull-right.setting-user {
   margin: -4px 0px 0px 0px;
  margin-right: 0px;
   padding: 0px 10px 0px 0px;
-  margin-right: 35px;
-  position: absolute;
-  right: 0px;
-  top: 0px;
+
 }
 
 .navbar-default .user-info  {
  
-  font-size: 13px;
+  font-size: 12px;
 }
 .navbar-default .date-info  {
  
   font-size: 13px;
+  width:155px!important;
 }
 .navbar-default a {
   color: #337ab7;
   text-decoration: none;
   font-size: 12px;
 }
-.langs-dropdown
-{
+.langs-dropdown {
   position: relative !important;
-  top: -0px!important;
-  right: -17px !important;
+  top: 0px !important;
+  left: 0px !important;
+  right:0px!important;
 }
-.navbar-default .date-info {
-  position: absolute;
-  right: -40px;
-}
+
 .navbar-default .navbar-collapse, .navbar-default .navbar-form {
   border-color: #e7e7e7;
   width:100%;
@@ -4529,20 +4566,15 @@ ul.pull-right.setting-user {
   transform: rotate(180deg);
 }
 .dashboard .status-block::after {
-  content: '';
-  
-  
-  height: 21%;
+ content: '';
+ height: 21%;
  display: inline-block; 
- float: right;
+ float:right;
   
 }
 .dashboard .status-block::before {
   content: '';
-
-
   height: 21%;
-
 }
 
 .dashboard .operating-content {
@@ -4558,9 +4590,7 @@ ul.pull-right.setting-user {
 }
 .check-block .check-status .check-list .check-label {
   display: inline-block;
-  padding-left:17%;
-  float:right;
-  margin-top: -28px;
+  line-height: 40px;
 }
 .ReactTable {
   background-color: #06253a !important;
@@ -4674,6 +4704,19 @@ margin: 0px;
   .check-block .check-status .check-list .check-label {
     display: inline-block;
     padding-left:0px;
+}
+
+
+  .dashboard .status-block .each-status .status-header {
+    color: #ed7d31;
+    text-transform: uppercase;
+    font-size: 11px;
+}
+  .langs-dropdown {
+    position: absolute !important;
+    top: 14px !important;
+    right: 200px!important;
+    left: unset!important;
 }
 input[type="checkbox"] + label span {
   display: inline-block;
